--- a/packaging/setup_win32.py.in
+++ b/packaging/setup_win32.py.in
@@ -121,24 +121,23 @@ build_options = {
 executables = [
     Executable(script="@EXTERNALPROJECT_INSTALL_PREFIX@/bin/cura_app.py",
                base="Win32GUI",
-               targetName = "Cura.exe",
+               targetName = "Dremel3DSlicer.exe",
                icon="@CMAKE_SOURCE_DIR@/packaging/cura.ico"
                ),
     Executable(script="@EXTERNALPROJECT_INSTALL_PREFIX@/bin/cura_app.py",
                base="Console",
-               targetName = "CuraCLI.exe",
+               targetName = "Dremel3DSlicerCLI.exe",
                icon="@CMAKE_SOURCE_DIR@/packaging/cura.ico"
                ),
-    
 ]
 
 setup(
-    name = "Ultimaker Cura",
+    name = "Dremel DigiLab 3D Slicer",
     version = "@CURA_VERSION_MAJOR@.@CURA_VERSION_MINOR@.@CURA_VERSION_PATCH@",
-    description = "Ultimaker Cura",
-    long_description = "Ultimaker Cura - 3D Printing Software",
-    author = "Ultimaker B.V.",
-    url = "http://software.ultimaker.com/",
+    description = "Dremel DigiLab 3D Slicer",
+    long_description = "Dremel DigiLab 3D Slicer - 3D Printing Software",
+    author = "3DPrinterOS",
+    url = "https://digilab.dremel.com/software",
     license = "GNU LESSER GENERAL PUBLIC LICENSE (LGPL)",
 
     options = {"build_exe": build_options},
