--- a/cmake/NSIS.template.in
+++ b/cmake/NSIS.template.in
@@ -541,20 +541,20 @@ FunctionEnd
 
 !include "FileAssociation.nsh"
 
-Section /o "Open 3MF files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".3mf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "3MF model file"
+Section /o "Open 3MF files with Kodak 3D Slicer"
+    ${RegisterExtension} "$INSTDIR\Kodak3DSlicer.exe" ".3mf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "3MF model file"
 SectionEnd
 
-Section /o "Open OBJ files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".obj" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.obj.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "OBJ model file"
+Section /o "Open OBJ files with Kodak 3D Slicer"
+    ${RegisterExtension} "$INSTDIR\Kodak3DSlicer.exe" ".obj" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.obj.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "OBJ model file"
 SectionEnd
 
-Section "Open STL files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".stl" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.stl.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "STL model file"
+Section "Open STL files with Kodak 3D Slicer"
+    ${RegisterExtension} "$INSTDIR\Kodak3DSlicer.exe" ".stl" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.stl.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "STL model file"
 SectionEnd
 
-Section /o "Open X3D files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".x3d" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.x3d.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "X3D model file"
+Section /o "Open X3D files with Kodak 3D Slicer"
+    ${RegisterExtension} "$INSTDIR\Kodak3DSlicer.exe" ".x3d" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.x3d.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "X3D model file"
 SectionEnd
 
 ;--------------------------------
@@ -869,8 +869,8 @@ Section "Uninstall"
   ${UnRegisterExtension} ".x3d" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.x3d.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@"
 
   ;Remove executable from MuiCache
-  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\Cura.exe.ApplicationCompany"
-  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\Cura.exe.FriendlyAppName"
+  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\Kodak3DSlicer.exe.ApplicationCompany"
+  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\Kodak3DSlicer.exe.FriendlyAppName"
 
   ;Remove the uninstaller itself.
   Delete "$INSTDIR\Uninstall.exe"
@@ -944,7 +944,7 @@ SectionEnd
 ; Needed to remove " from the old uninstaller paths
 !include "CharStrStrip.nsh"
 
-; Uninstall a previous version of Cura.
+; Uninstall a previous version of Kodak3DSlicer.
 ; Parameters are:
 ; _NAME: Display name
 ; _VERSION: Registry entry to get the Uninstall executable from.
@@ -987,21 +987,21 @@ Function .onInit
   StrCmp "@CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL@" "ON" 0 inst
   IfSilent inst 0
 
-  !insertmacro uninstallVersion "Cura 14.12" "Cura_14.12.1" "14121"
-  !insertmacro uninstallVersion "Cura 15.04" "Cura_15.04.4" "15044"
-  !insertmacro uninstallVersion "Cura 15.04" "Cura_15.04.5" "15045"
-  !insertmacro uninstallVersion "Cura 15.04" "Cura_15.04.6" "15046"
-  !insertmacro uninstallVersion "Cura 2.1" "Cura 2.1" "21"
-  !insertmacro uninstallVersion "Cura 2.3" "Cura 2.3" "23"
-  !insertmacro uninstallVersion "Cura 2.4" "Cura 2.4" "24"
-  !insertmacro uninstallVersion "Cura 2.5" "Cura 2.5" "25"
-  !insertmacro uninstallVersion "Cura 2.6" "Cura 2.6" "26"
-  !insertmacro uninstallVersion "Cura 2.7" "Cura 2.7" "27"
-  !insertmacro uninstallVersion "Cura 3.0" "Cura 3.0" "30"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.0" "Ultimaker Cura 3.0" "U30" ; Name change during 3.0 release
-  !insertmacro uninstallVersion "Ultimaker Cura 3.1" "Ultimaker Cura 3.1" "U31"
-  ;!insertmacro uninstallVersion "Ultimaker Cura 3.2" "Ultimaker Cura 3.2" "U32" ; Template for the future
-  !insertmacro uninstallVersion "Ultimaker Cura @CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "@CPACK_PACKAGE_INSTALL_REGISTRY_KEY@" "latest"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 14.12" "Kodak_3D_Slicer_14.12.1" "14121"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 15.04" "Kodak_3D_Slicer_15.04.4" "15044"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 15.04" "Kodak_3D_Slicer_15.04.5" "15045"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 15.04" "Kodak_3D_Slicer_15.04.6" "15046"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 2.1" "Kodak 3D Slicer 2.1" "21"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 2.3" "Kodak 3D Slicer 2.3" "23"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 2.4" "Kodak 3D Slicer 2.4" "24"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 2.5" "Kodak 3D Slicer 2.5" "25"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 2.6" "Kodak 3D Slicer 2.6" "26"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 2.7" "Kodak 3D Slicer 2.7" "27"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 3.0" "Kodak 3D Slicer 3.0" "30"
+  !insertmacro uninstallVersion "Kodak 3D Slicer 3.0" "Kodak 3D Slicer 3.0" "U30" ; Name change during 3.0 release
+  !insertmacro uninstallVersion "Kodak 3D Slicer 3.1" "Kodak 3D Slicer 3.1" "U31"
+  ;!insertmacro uninstallVersion "Kodak 3D Slicer 3.2" "Kodak 3D Slicer 3.2" "U32" ; Template for the future
+  !insertmacro uninstallVersion "Kodak 3D Slicer @CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "@CPACK_PACKAGE_INSTALL_REGISTRY_KEY@" "latest"
 
 inst:
 
