--- a/packaging/setup_osx.py.in
+++ b/packaging/setup_osx.py.in
@@ -61,7 +61,7 @@ build_options = {
 bdist_mac_options = {
     "iconfile": "@CMAKE_SOURCE_DIR@/packaging/cura.icns",
     "custom_info_plist": "@CMAKE_BINARY_DIR@/Info.plist",
-    "bundle_name": "Ultimaker Cura"
+    "bundle_name": "Kodak 3D Slicer"
 }
 
 executables = [
@@ -69,11 +69,11 @@ executables = [
 ]
 
 setup(
-    name = "Ultimaker Cura",
+    name = "Kodak 3D Slicer",
     version = "@CURA_VERSION_MAJOR@.@CURA_VERSION_MINOR@.@CURA_VERSION_PATCH@",
     description = "3D Printing Software",
-    author = "Ultimaker B.V.",
-    url = "http://software.ultimaker.com/",
+    author = "3DPrinterOS",
+    url = "https://3dprinteros.com/",
     license = "GNU LESSER GENERAL PUBLIC LICENSE (LGPL)",
 
     options = {"build_exe": build_options, "bdist_mac": bdist_mac_options },
