--- a/packaging/Info.plist.in
+++ b/packaging/Info.plist.in
@@ -5,9 +5,9 @@
     <key>CFBundleIdentifier</key>
     <string>nl.ultimaker.cura</string>
     <key>CFBundleName</key>
-    <string>Ultimaker Cura</string>
+    <string>KODAK 3D Slicer</string>
     <key>CFBundleDisplayName</key>
-    <string>Ultimaker Cura</string>
+    <string>KODAK 3D Slicer</string>
     <key>CFBundleVersion</key>
     <string>@CURA_VERSION@</string>
     <key>CFBundleDevelopmentRegion</key>
