--- a/cmake/NSIS.template.in
+++ b/cmake/NSIS.template.in
@@ -542,53 +542,53 @@ FunctionEnd
 
 !include "FileAssociation.nsh"
 
-Section /o "Open 3MF files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".3mf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "3D Manufacturing Format"
+Section /o "Open 3MF files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".3mf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "3D Manufacturing Format"
 SectionEnd
 
-Section /o "Open AMF files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".amf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Additive Manufacturing Format"
+Section /o "Open AMF files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".amf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Additive Manufacturing Format"
 SectionEnd
 
-Section /o "Open CTM files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".ctm" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Open Compressed Triangle Mesh"
+Section /o "Open CTM files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".ctm" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Open Compressed Triangle Mesh"
 SectionEnd
 
-Section /o "Open DAE files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".dae" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "COLLADA Digital Asset Exchange"
+Section /o "Open DAE files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".dae" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "COLLADA Digital Asset Exchange"
 SectionEnd
 
-Section /o "Open GLB files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".glb" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "glTF Binary"
+Section /o "Open GLB files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".glb" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "glTF Binary"
 SectionEnd
 
-Section /o "Open glTF files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".gltf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "glTF Embedded JSON"
+Section /o "Open glTF files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".gltf" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "glTF Embedded JSON"
 SectionEnd
 
-Section /o "Open OBJ files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".obj" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.obj.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Wavefront OBJ"
+Section /o "Open OBJ files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".obj" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.obj.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Wavefront OBJ"
 SectionEnd
 
-Section /o "Open PLY files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".ply" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.ply.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Stanford Triangle Format"
+Section /o "Open PLY files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".ply" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.ply.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Stanford Triangle Format"
 SectionEnd
 
-Section "Open STL files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".stl" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.stl.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Stereolithography Mesh"
+Section "Open STL files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".stl" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.stl.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Stereolithography Mesh"
 SectionEnd
 
-Section /o "Open X3D files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".x3d" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.x3d.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "XML-based 3D model"
+Section /o "Open X3D files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".x3d" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.x3d.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "XML-based 3D model"
 SectionEnd
 
-Section /o "Open ZAE files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".zae" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Compressed COLLADA Digital Asset Exchange"
+Section /o "Open ZAE files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".zae" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.3mf.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "Compressed COLLADA Digital Asset Exchange"
 SectionEnd
 
-Section /o "Open GCODE files with Cura"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".gcode" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.gcode.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "G-code toolpath"
-    ${RegisterExtension} "$INSTDIR\Cura.exe" ".g"     "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.g.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@"     "G-code toolpath"
+Section /o "Open GCODE files with YourDesktopSlicer"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".gcode" "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.gcode.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "G-code toolpath"
+    ${RegisterExtension} "$INSTDIR\YourDesktopSlicer.exe" ".g"     "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.g.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@"     "G-code toolpath"
 SectionEnd
 
 ;--------------------------------
@@ -886,8 +886,8 @@ Section "Uninstall"
   IfSilent +6
   MessageBox MB_YESNO "Do you want to remove all your configuration files?" IDYES remove_user_dir_yes IDNO remove_user_dir_no
   remove_user_dir_yes:
-    RMDir /r "$UserAppDataDir\cura\$CuraVersionDir"
-    RMDir /r "$UserLocalAppDataDir\cura\$CuraVersionDir"
+    RMDir /r "$UserAppDataDir\YourDesktopSlicer\$CuraVersionDir"
+    RMDir /r "$UserLocalAppDataDir\YourDesktopSlicer\$CuraVersionDir"
   remove_user_dir_no:
 
   ReadRegStr $START_MENU SHCTX \
@@ -926,8 +926,8 @@ Section "Uninstall"
   ${UnRegisterExtension} ".g"     "@CPACK_PACKAGE_NAME_NO_WHITESPACES@.g.@CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@"
 
   ;Remove executable from MuiCache
-  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\Cura.exe.ApplicationCompany"
-  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\Cura.exe.FriendlyAppName"
+  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\YourDesktopSlicer.exe.ApplicationCompany"
+  DeleteRegKey HKCR "Local Settings\Software\Microsoft\Windows\Shell\MuiCache\$INSTDIR\YourDesktopSlicer.exe.FriendlyAppName"
 
   ;Remove the uninstaller itself.
   Delete "$INSTDIR\Uninstall.exe"
@@ -1044,32 +1044,7 @@ Function .onInit
   StrCmp "@CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL@" "ON" 0 inst
   IfSilent inst 0
 
-  !insertmacro uninstallVersion "Cura 14.12" "Cura_14.12.1" "14121"
-  !insertmacro uninstallVersion "Cura 15.04" "Cura_15.04.4" "15044"
-  !insertmacro uninstallVersion "Cura 15.04" "Cura_15.04.5" "15045"
-  !insertmacro uninstallVersion "Cura 15.04" "Cura_15.04.6" "15046"
-  !insertmacro uninstallVersion "Cura 2.1" "Cura 2.1" "21"
-  !insertmacro uninstallVersion "Cura 2.3" "Cura 2.3" "23"
-  !insertmacro uninstallVersion "Cura 2.4" "Cura 2.4" "24"
-  !insertmacro uninstallVersion "Cura 2.5" "Cura 2.5" "25"
-  !insertmacro uninstallVersion "Cura 2.6" "Cura 2.6" "26"
-  !insertmacro uninstallVersion "Cura 2.7" "Cura 2.7" "27"
-  !insertmacro uninstallVersion "Cura 3.0" "Cura 3.0" "30"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.0" "Ultimaker Cura 3.0" "U30" ; Name change during 3.0 release
-  !insertmacro uninstallVersion "Ultimaker Cura 3.1" "Ultimaker Cura 3.1" "U31"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.2" "Ultimaker Cura 3.2" "U32"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.3" "Ultimaker Cura 3.3" "U33"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.4" "Ultimaker Cura 3.4" "U34"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.5" "Ultimaker Cura 3.5" "U35"
-  !insertmacro uninstallVersion "Ultimaker Cura 3.6" "Ultimaker Cura 3.6" "U36"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.0" "Ultimaker Cura 4.0" "U40"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.1" "Ultimaker Cura 4.1" "U41"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.2" "Ultimaker Cura 4.2" "U42"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.3" "Ultimaker Cura 4.3" "U43"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.4" "Ultimaker Cura 4.4" "U44"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.5" "Ultimaker Cura 4.5" "U45"
-  !insertmacro uninstallVersion "Ultimaker Cura 4.6" "Ultimaker Cura 4.6" "U46"
-  !insertmacro uninstallVersion "Ultimaker Cura @CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "@CPACK_PACKAGE_INSTALL_REGISTRY_KEY@" "latest"
+  !insertmacro uninstallVersion "Your Desktop Slicer @CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@" "@CPACK_PACKAGE_INSTALL_REGISTRY_KEY@" "latest"
 
 inst:
 
